added new images and page

--- a/mysjis/products.html
+++ b/mysjis/products.html
@@ -25,7 +25,7 @@
   <body>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span>
+      <span class="site-heading-upper text-primary mb-3">Sunday School</span>
       <span class="site-heading-lower">Business Casual</span>
     </h1>
 
@@ -63,15 +63,21 @@
           <div class="product-item-title d-flex">
             <div class="bg-faded p-5 d-flex ml-auto rounded">
               <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">Blended to Perfection</span>
-                <span class="section-heading-lower">Coffees &amp; Teas</span>
+                <span class="section-heading-upper">About</span>
+                <span class="section-heading-lower">SAN JOSE ISLAMIC SCHOOL</span>
               </h2>
+
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-sm-0" src="img/school/4.jpg" alt="">
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+              <p class="mb-0">The San Jose Islamic School (SJIS) executive committee feels blessed by Allah Almighty to serve our community. We appreciate your trust and confidence in us. May Allah help us discharge this trust to the best of our abilities.<br>
+
+The joy seeing our children grow as Muslims in these modern times, is something that can never be described by words. Our success can only come from the mercy and blessings of Allah (swt). 
+
+<em>"And my success in my task can only come from Allah. In Him I trust and unto Him, I turn. (The Quran, 11:88)."</em><br>
+We encourage you to explore this website and find out about our classes and curriculum. You are welcome to visit the schoole between September and May, 10AM to 2PM.</p>
             </div>
           </div>
         </div>
@@ -84,15 +90,16 @@
           <div class="product-item-title d-flex">
             <div class="bg-faded p-5 d-flex mr-auto rounded">
               <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">Delicious Treats, Good Eats</span>
-                <span class="section-heading-lower">Bakery &amp; Kitchen</span>
+                <span class="section-heading-upper">Our Philosophy</span>
+               
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-sm-0" src="img/school/student_wall.jpg" alt="">
           <div class="product-item-description d-flex ml-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.</p>
+              <p class="mb-0">SJIS strives for the preservation of our crucial religious and moral heritage for our future generations by establishing a Sunday School Program. Our mission is to impart Islamic education to the children and to enable them to grow as Muslims in this ever-changing society.
+With an outstanding teaching staff, SJIS has always been a step closer to our young children to meet this challenge. By the grace of Allah (swt), hundreds of our young children and youth have been educated from this school and are now are leading successful lives as Muslims.</p>
             </div>
           </div>
         </div>
@@ -105,15 +112,15 @@
           <div class="product-item-title d-flex">
             <div class="bg-faded p-5 d-flex ml-auto rounded">
               <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">From Around the World</span>
-                <span class="section-heading-lower">Bulk Speciality Blends</span>
+                <span class="section-heading-upper">Our History</span>
+                <span class="section-heading-lower">Humble Begining</span>
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-sm-0" src="img/school/1.jpg" alt="">
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
+              <p class="mb-0">San Jose Islamic School began in 1981 in the garage of a community member. Then it moved to a house, then to a rented building and finally to its present location at SBIA's downtown center on the third street. The original name South Bay Area Islamic School was changed to San Jose Islamic School in 2015. The school has been striving for Islamic education of the young generation of Muslims in the South Bay.</p>
             </div>
           </div>
         </div>
