--- a/mysjis/index.html
+++ b/mysjis/index.html
@@ -66,21 +66,27 @@
     <section class="page-section clearfix">
       <div class="container">
         <div class="intro">
-          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
+          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/school/student_wall.jpg" alt="">
+
           <div class="intro-text left-0 text-center bg-faded p-5 rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Fresh Coffee</span>
-              <span class="section-heading-lower">Worth Drinking</span>
+              <span class="section-heading-upper">SJIS</span>
+             <!--  <span class="section-heading-lower">Worth Drinking</span> -->
             </h2>
-            <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
+            <p class="mb-3">We are accepting admission for the year 2017-2018.
+Please see us on Sundays between ​September 10th and  20th May, 10AM to 2PM . <br>
+Scholarships offered!
             </p>
             <div class="intro-button mx-auto">
-              <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
+              <a class="btn btn-primary btn-xl" href="#">Apply Now</a>
+               <a class="btn btn-secondary btn-xl" href="#">Visit Us</a>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+
 
     <section class="page-section cta">
       <div class="container">
@@ -97,8 +103,9 @@
           </div>
         </div>
       </div>
-    </section>
 
+    </section>
+   
     <footer class="footer text-faded text-center py-5">
       <div class="container">
         <p class="m-0 small">Copyright &copy; SJIS 2018</p>
