added the files

--- a/mysjis/history.html
+++ b/mysjis/history.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+       <title>San Jose Islamic School</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,9 +24,9 @@
 
   <body>
 
-    <h1 class="site-heading text-center text-white d-none d-lg-block">
+      <h1 class="site-heading text-center text-white d-none d-lg-block">
       <span class="site-heading-upper text-primary mb-3">Sunday School</span>
-      <span class="site-heading-lower">Business Casual</span>
+      <span class="site-heading-lower">San Jose Islamic School</span>
     </h1>
 
     <!-- Navigation -->
@@ -38,19 +38,29 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
-            <li class="nav-item px-lg-4">
+            <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="index.html">Home
-                <span class="sr-only">(current)</span>
+                
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
-            </li>
-            <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+              <a class="nav-link text-uppercase text-expanded" href="about.html">About Us</a>
+              <span class="sr-only">(current)</span>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+              <a class="nav-link text-uppercase text-expanded" href="products.html">Admissions</a>
+            </li>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="store.html">Academics</a>
+            </li>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="store.html">News & Events</a>
+            </li>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="store.html">Donate</a>
+            </li>
+             <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -127,9 +137,9 @@ With an outstanding teaching staff, SJIS has always been a step closer to our yo
       </div>
     </section>
 
-    <footer class="footer text-faded text-center py-5">
+     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 small">Copyright &copy; SJIS 2018</p>
       </div>
     </footer>
 
