--- a/mysjis/contact.html
+++ b/mysjis/contact.html
@@ -30,10 +30,7 @@
     </h1>
 
     <!-- Navigation -->
-
-   <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-
+   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
         <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +38,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
-            <li class="nav-item active px-lg-4">
+            <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="index.html">Home
                
               </a>
@@ -50,7 +47,6 @@
               <a class="nav-link text-uppercase text-expanded" href="about.html">About Us</a>
             </li>
             <li class="nav-item px-lg-4">
-
               <a class="nav-link text-uppercase text-expanded" href="admissions.html">Admissions</a>
             </li>
             <li class="nav-item px-lg-4">
@@ -65,7 +61,7 @@
             <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
               <span class="sr-only">(current)</span>
-       </li>
+            </li>
           </ul>
         </div>
       </div>
